--- a/package.json
+++ b/package.json
@@ -13,21 +13,13 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
-    "@types/mermaid": "8.2.8",
-    "@uiw/react-markdown-editor": "^4.0.3",
     "@uiw/react-markdown-preview": "^4.0.6",
-    "@uiw/react-md-editor": "3.9.9",
-    "mermaid": "8.14.0",
-    "mermaid.cli": "^0.5.1",
+    "@uiw/react-md-editor": "^3.9.9",
+    "mermaid": "^8.14.0",
     "next": "12.1.6",
     "next-remove-imports": "^1.0.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-markdown": "^8.0.3",
-    "rehype-katex": "^6.0.2",
-    "remark-math": "^5.1.1",
-    "remark-mermaid": "^0.2.0",
-    "remark-mermaidjs": "^2.1.1"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
