--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -49,6 +49,9 @@ jobs:
     - name: add nojekyll
       run: touch ./out/.nojekyll
 
+    - name: add CNAME
+      run: cp ./CNAME ./out/
+
     # gh-pagesブランチにoutディレクトリの中身をプッシュする
     # gh-pagesブランチは自動的に作成される
     - name: deploy
