--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uiw/react-md-editor": "^3.9.9",
     "mermaid": "^8.14.0",
     "next": "12.1.6",
+    "next-i18next": "^11.0.0",
     "next-remove-imports": "^1.0.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
