--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -17,7 +16,7 @@
     "@uiw/react-md-editor": "^3.9.9",
     "mermaid": "^8.14.0",
     "next": "12.1.6",
-    "next-i18next": "^11.0.0",
+    "next-export-i18n": "^2.0.3",
     "next-remove-imports": "^1.0.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
