--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-export-i18n": "^2.0.3",
     "next-remove-imports": "^1.0.6",
     "react": "18.1.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
