--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,8 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:latest
+FROM golang:latest
 ENV TZ=Asia/Tokyo
 
-RUN apt-get install -y ca-certificates
-
 WORKDIR /workspace
-COPY ./requirements.txt /workspace/
-
-RUN pip install -r /workspace/requirements.txt
 COPY . /workspace/
-RUN chmod +x ./entrypoint.sh
-CMD ./entrypoint.sh
+RUN go build .
+RUN chmod +x main
+CMD ./main
