--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
+    "@protobuf-ts/plugin": "^2.5.0",
     "@uiw/react-markdown-preview": "^4.0.6",
     "@uiw/react-md-editor": "^3.9.9",
     "mermaid": "^8.14.0",
