--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -32,3 +32,15 @@ services:
       - db
     ports:
       - 8081:8081
+
+  client:
+    image: wongnai/grpcui
+    environment: 
+      - GRPCUI_SERVER=backend:8080
+    ports:
+      - 8888:8080
+    volumes:
+      - .:/home
+    command: ["sh", "-c", "sleep 5;", "/usr/local/scripts/start.sh"]
+    depends_on: 
+      - backend
