--- a/backend/docker-compose.autogen.yml
+++ b/backend/docker-compose.autogen.yml
@@ -13,3 +13,10 @@ services:
       - ".:/src"
     working_dir: "/src"
     command: ["generate"]
+
+  mockgen:
+    image: ghcr.io/tk42/gomock
+    volumes:
+      - ".:/home"
+    working_dir: "/home"
+    command: ["go", "generate", "./..."]
